--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 #con {
     position: absolute;
     top: 50%;
-    left: 50%
+    left: 50%;
     transform: translate(-50%, -50%);
     border-top: 10px solid #f70608;
     border-bottom: 10px solid #f70608; 
